--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 14.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>[REAL ACCOUNT] Lost 8,000 in one Week Trading... (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>How to End Stress and Anxiety | Eckhart Tolle on Peace, Presence and Inner Freedom (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Algo Trading Tips: Backtesting Secrets Revealed! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Why Passive Investing Crushes Stock Picking (Backed by Data)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Finding Your Way Back to the Beauty Within</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 11</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Setup Mistakes Even Experienced Golfers Make (and How to Fix Them)</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2228,7 +2228,7 @@
                     <div class="video-info">
                         <h3>Tip. 10 Most important Step when making pizza</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2283,7 +2283,7 @@
                     <div class="video-info">
                         <h3>ZEST Garden BBQ Table | Pizza Oven Table - Set Up & Review</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 14, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 14.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>[REAL ACCOUNT] Lost 8,000 in one Week Trading... (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Algo Trading Tips: Backtesting Secrets Revealed! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5127,7 +5127,7 @@
                         <div class="video-info">
                             <h3>Why Passive Investing Crushes Stock Picking (Backed by Data)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5138,7 +5138,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 11</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>How to End Stress and Anxiety | Eckhart Tolle on Peace, Presence and Inner Freedom (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Finding Your Way Back to the Beauty Within</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8933,7 +8933,7 @@
                         <div class="video-info">
                             <h3>Tip. 10 Most important Step when making pizza</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -8966,7 +8966,7 @@
                         <div class="video-info">
                             <h3>ZEST Garden BBQ Table | Pizza Oven Table - Set Up & Review</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 14, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -9412,7 +9412,7 @@
                         <div class="video-info">
                             <h3>Setup Mistakes Even Experienced Golfers Make (and How to Fix Them)</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
